生成されるHTML内の細かい文言の修正

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <script src="./js/carousel.js"></script>
@@ -37,7 +36,7 @@
     
                 <div>
                     <label for="count">スライドの数</label>
-                    <input type="number" name="count" id="slideCnt" value="1">
+                    <input type="number" name="count" value="1" id="slideCnt">
                 </div>
             </p>
             <p>
