--- a/TextSample/index.html
+++ b/TextSample/index.html
@@ -38,8 +38,8 @@
 
     背景色:
       <select name="backgroundColor">
-        <option value="Dark" selected>Dark</option>
-        <option value="Light">Light</option>
+        <option value="Dark">Dark</option>
+        <option value="Light" selected>Light</option>
         <option value="Primary">Primary</option>
         <option value="Secondary">Secondary</option>
         <option value="Success">Success</option>
@@ -48,22 +48,6 @@
         <option value="Danger">Danger</option>
       </select>
 
-    </div><br>
-
-    <div class="container dropdown">
-
-      背景グラデーション:
-        <select name="backgroundGradation">
-          <option value="Dark" selected>Dark</option>
-          <option value="Light">Light</option>
-          <option value="Primary">Primary</option>
-          <option value="Secondary">Secondary</option>
-          <option value="Success">Success</option>
-          <option value="Info">Info</option>
-          <option value="Warning">Warning</option>
-          <option value="Danger">Danger</option>
-       </select>
-  
     </div><br>
 
     <div class="container dropdown">
@@ -136,7 +120,6 @@
     </form>
 
     <script src="app.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
   </body>
 </html>
