--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 </div>
             </div>
         </div>
-        <div class="tab-pane fade show active" id="picture" role="tabpanel" aria-labelledby="picture-tab">
+        <div class="tab-pane fade show" id="picture" role="tabpanel" aria-labelledby="picture-tab">
             <div class="accordion" id="settingsList">
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingOne">
