--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <h1>開発支援ツーーーーーーーーーーール</h1>
     <ul class="nav nav-tabs" id="myTab" role="tablist">
         <li class="nav-item" role="presentation">
-            <a class="nav-link active" id="home-tab" data-bs-toggle="tab" href="#text" role="tab" aria-controls="text" aria-selected="true">テキスト</a>
+            <a class="nav-link active" id="home-tab" data-bs-toggle="tab" href="#text-tab" role="tab" aria-controls="text" aria-selected="true">テキスト</a>
         </li>
         <li class="nav-item" role="presentation">
-            <a class="nav-link" id="profile-tab" data-bs-toggle="tab" href="#picture" role="tab" aria-controls="picture" aria-selected="false">写真</a>
+            <a class="nav-link" id="profile-tab" data-bs-toggle="tab" href="#picture-tab" role="tab" aria-controls="picture" aria-selected="false">写真</a>
         </li>
     </ul>
     <div class="tab-content" id="myTabContent">
-        <div class="tab-pane fade show active" id="text" role="tabpanel" aria-labelledby="text-tab">
+        <div class="tab-pane fade show active" id="text-tab" role="tabpanel" aria-labelledby="text-tab">
             <div class="accordion" id="settingsList">
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingOne">
@@ -163,7 +163,7 @@
                 </div>
             </div>
         </div>
-        <div class="tab-pane fade show" id="picture" role="tabpanel" aria-labelledby="picture-tab">
+        <div class="tab-pane fade show" id="picture-tab" role="tabpanel" aria-labelledby="picture-tab">
             <div class="accordion" id="settingsList">
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingOne">
