cardの自動生成追加

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <!-- リンク先からbootstrapを入手 -->
+    <!-- リンク先からbootstrapを入手 ←ステマかこれ？ by CaffeinePower-->
     <link href="css/common.css" rel="stylesheet"><!-- 共通 -->
     <link href="css/tab.css" rel="stylesheet"><!-- タブ -->
     <link href="css/accordion.css" rel="stylesheet"><!-- アコーディオン -->
@@ -35,7 +35,7 @@
             <div class="tab-pane fade show active" id="text-tab" role="tabpanel" aria-labelledby="text-tab">
                 <div class="accordion" id="settingsListText">
                     <div class="accordion-item">
-                        <h2 class="accordion-header" id="headingOneText">
+                        <h2 class="accordion-header" id="headingOneText"><div class=text-dark container bg-light  text-start  fs-3 fw-3></div>
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#collapseOneText" aria-expanded="false" aria-controls="collapseOneText">
                                 Text
@@ -191,7 +191,22 @@
                         <div id="collapseTwoPic" class="accordion-collapse collapse" aria-labelledby="headingTwoPic"
                             data-bs-parent="#settingsListPic">
                             <div id="card" class="accordion-body">
-
+                                <div>
+                                    <input type="checkbox" name="titleChk" id="cardTitleChk" onchange="if(this.checked) {document.getElementById('cardTitleTxt').removeAttribute('disabled')}else{document.getElementById('cardTitleTxt').setAttribute('disabled', true)}">
+                                    <input type="text" name="titleTxt" id="cardTitleTxt" placeholder="タイトルを入力" disabled>
+                                </div>
+                                <div>
+                                    <input type="checkbox" name="subtitleChk" id="cardSubtitleChk" onchange="if(this.checked) {document.getElementById('cardSubtitleTxt').removeAttribute('disabled')}else{document.getElementById('cardSubtitleTxt').setAttribute('disabled', true)}">
+                                    <input type="text" name="subtitleTxt" id="cardSubtitleTxt" placeholder="サブタイトルを入力" disabled>
+                                </div>
+                                <div>
+                                    <input type="checkbox" name="textChk" id="cardTextChk" onchange="if(this.checked) {document.getElementById('cardTextTxt').removeAttribute('disabled')}else{document.getElementById('cardTextTxt').setAttribute('disabled', true)}">
+                                    <textarea name="textTxt" id="cardTextTxt" style="vertical-align: top;" placeholder="本文を入力" disabled id="" cols="30" rows="5"></textarea>
+                                </div>
+                                <div>
+                                    <input type="checkbox" name="imgChk" id="cardImgChk" onchange="">
+                                    <label for="cardImgChk">画像を配置</label>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -236,6 +251,7 @@
 
     <script src="js/carousel.js"></script>
     <script src="js/text.js"></script>
+    <script src="js/card.js"></script>
     <script src="js/main.js"></script>
 </body>
 
