onchangeにjsをかくのをやめた

--- a/index.html
+++ b/index.html
@@ -192,16 +192,16 @@
                             data-bs-parent="#settingsListPic">
                             <div id="card" class="accordion-body">
                                 <div>
-                                    <input type="checkbox" name="titleChk" id="cardTitleChk" onchange="if(this.checked) {document.getElementById('cardTitleTxt').removeAttribute('disabled')}else{document.getElementById('cardTitleTxt').setAttribute('disabled', true)}">
+                                    <input type="checkbox" name="titleChk" id="cardTitleChk">
                                     <input type="text" name="titleTxt" id="cardTitleTxt" placeholder="タイトルを入力" disabled>
                                 </div>
                                 <div>
-                                    <input type="checkbox" name="subtitleChk" id="cardSubtitleChk" onchange="if(this.checked) {document.getElementById('cardSubtitleTxt').removeAttribute('disabled')}else{document.getElementById('cardSubtitleTxt').setAttribute('disabled', true)}">
+                                    <input type="checkbox" name="subtitleChk" id="cardSubtitleChk">
                                     <input type="text" name="subtitleTxt" id="cardSubtitleTxt" placeholder="サブタイトルを入力" disabled>
                                 </div>
                                 <div>
-                                    <input type="checkbox" name="textChk" id="cardTextChk" onchange="if(this.checked) {document.getElementById('cardTextTxt').removeAttribute('disabled')}else{document.getElementById('cardTextTxt').setAttribute('disabled', true)}">
-                                    <textarea name="textTxt" id="cardTextTxt" style="vertical-align: top;" placeholder="本文を入力" disabled id="" cols="30" rows="5"></textarea>
+                                    <input type="checkbox" name="textChk" id="cardTextChk" >
+                                    <textarea name="textTxt" id="cardTextTxt" style="vertical-align: top;" placeholder="本文を入力" disabled cols="30" rows="5"></textarea>
                                 </div>
                                 <div>
                                     <input type="checkbox" name="imgChk" id="cardImgChk" onchange="">
