出力コードコピーの不具合修正・文言変更

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </head>
 
     <body class="mx-auto">
-        <h1 class="p-4">開発支援ツーーーーーーーーーーール</h1>
+        <h1 class="p-4">開発支援ツール</h1>
         <div class="left width container" style="height: auto;">
             <div class="container">
                 <ul class="nav nav-tabs nav-pills" id="myTab" role="tablist">
@@ -38,7 +38,7 @@
                                 <h2 class="accordion-header" id="headingOneText"><div class=text-dark container bg-light  text-start  fs-3 fw-3></div>
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#collapseOneText" aria-expanded="false" aria-controls="collapseOneText">
-                                        Text
+                                        文字
                                     </button>
                                 </h2>
                                 <div id="collapseOneText" class="accordion-collapse collapse" aria-labelledby="headingOneText"
@@ -131,13 +131,13 @@
                                 <h2 class="accordion-header" id="headingThreeText">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#collapseThreeText" aria-expanded="false" aria-controls="collapseThreeText">
-                                        Accordion Item #3
+                                        設定2
                                     </button>
                                 </h2>
                                 <div id="collapseThreeText" class="accordion-collapse collapse" aria-labelledby="headingThreeText"
                                     data-bs-parent="#settingsListText">
                                     <div class="accordion-body">
-                                        なんか書け
+                                        設定項目
                                     </div>
                                 </div>
                             </div>
@@ -149,7 +149,7 @@
                                 <h2 class="accordion-header" id="headingOnePic">
                                     <button class="accordion-button" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#collapseOnePic" aria-expanded="true" aria-controls="collapseOnePic">
-                                        Carousel
+                                        スライドショー
                                     </button>
                                 </h2>
                                 <div id="collapseOnePic" class="accordion-collapse collapse" aria-labelledby="headingOnePic"
@@ -176,7 +176,8 @@
                                         </div>
 
                                         <div>
-                                            <input type="number" name="count" id="slideCnt" placeholder="スライドの数">
+                                            <label for="slideCnt">スライドの数</label>
+                                            <input type="number" name="count" id="slideCnt" placeholder="スライドの数" value="1">
                                         </div>
                                     </div>
                                 </div>
@@ -185,7 +186,7 @@
                                 <h2 class="accordion-header" id="headingTwoPic">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#collapseTwoPic" aria-expanded="false" aria-controls="collapseTwoPic">
-                                        Card
+                                        カード
                                     </button>
                                 </h2>
                                 <div id="collapseTwoPic" class="accordion-collapse collapse" aria-labelledby="headingTwoPic"
@@ -216,13 +217,13 @@
                                 <h2 class="accordion-header" id="headingThreePic">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#collapseThreePic" aria-expanded="false" aria-controls="collapseThreePic">
-                                        Accordion Item #3
+                                        設定3
                                     </button>
                                 </h2>
                                 <div id="collapseThreePic" class="accordion-collapse collapse" aria-labelledby="headingThreePic"
                                     data-bs-parent="#settingsListPic">
                                     <div class="accordion-body">
-                                        なんか書け
+                                        設定項目
                                     </div>
                                 </div>
                             </div>
