--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
                                         <div class="p-2">
                                             <label for="fontWeight">文字の太さ</label>
                                             <select id="fontWeight">
-                                                <option value="fw-1">極太</option>
-                                                <option value="fw-2">太め</option>
-                                                <option value="fw-3" selected>中</option>
-                                                <option value="fw-4">細め</option>
-                                                <option value="fw-5">極細</option>
+                                                <option value="fw-bold">極太</option>
+                                                <option value="fw-bolder">太め</option>
+                                                <option value="fw-normal" selected>中</option>
+                                                <option value="fw-light">細め</option>
+                                                <option value="fw-lighter">極細</option>
                                             </select>
                                         </div>
                                     </div>
