--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
                                         <div class="p-2">
                                             <label for="backGroundColor">背景色</label>
-                                            <select id="backGroundColor">
+                                            <select id="rowColumnsBackGroundColor">
                                                 <option value="dark">Dark</option>
                                                 <option value="light" selected>Light</option>
                                                 <option value="primary">Primary</option>
@@ -131,13 +131,41 @@
                                 <h2 class="accordion-header" id="headingThreeText">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#collapseThreeText" aria-expanded="false" aria-controls="collapseThreeText">
-                                        設定2
+                                        グリッド
                                     </button>
                                 </h2>
                                 <div id="collapseThreeText" class="accordion-collapse collapse" aria-labelledby="headingThreeText"
                                     data-bs-parent="#settingsListText">
-                                    <div class="accordion-body">
-                                        設定項目
+                                    <div class="accordion-body" id = "rowColumns">
+                                        <div>
+                                            <label for="cutCnt">分割の数</label>
+                                            <input type="number" name="count" id="cutCnt" placeholder="分割の数" value="1">
+                                        </div>
+
+                                        <div>
+                                            <label for="yousoCnt">要素の数</label>
+                                            <input type="number" name="count" id="yousoCnt" placeholder="要素の数" value="1">
+                                        </div>
+
+                                        <div class="p-2">
+                                            <label for="backGroundColor">背景色</label>
+                                            <select id="backGroundColor">
+                                                <option value="dark">Dark</option>
+                                                <option value="light" selected>Light</option>
+                                                <option value="primary">Primary</option>
+                                                <option value="secondary">Secondary</option>
+                                                <option value="success">Success</option>
+                                                <option value="info">Info</option>
+                                                <option value="warning">Warning</option>
+                                                <option value="danger">Danger</option>
+                                            </select>
+                                        </div>
+
+                                        <div>
+                                            <input type="checkbox" name="border" id="border">
+                                            <label for="border">枠</label>
+                                        </div>
+
                                     </div>
                                 </div>
                             </div>
@@ -255,6 +283,7 @@
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
 
+        <script src="js/rowColumns.js"></script>
         <script src="js/carousel.js"></script>
         <script src="js/text.js"></script>
         <script src="js/card.js"></script>
