--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                             </h2>
                             <div id="collapseThreePic" class="accordion-collapse collapse"
                                 aria-labelledby="headingThreePic" data-bs-parent="#settingsListPic">
-                                <div class="accordion-body">
+                                <div class="accordion-body" id="image">
                                                                         <div class="p-2">
                                         <input type="text" id="inputImageMessage" placeholder="ファイル名を入力してください">
                                     </div>
