--- a/index.html
+++ b/index.html
@@ -324,9 +324,9 @@
                                         サイズ:
                                         <select id="imageSizeChange">
                                             <option value='width="2.5%"'>25%</option>
-                                            <option value='width="5"'>50%</option>
+                                            <option value='width="5%"'>50%</option>
                                             <option value='width="7.5%"'>75%</option>
-                                            <option value='width="10"' selected>100%</option>
+                                            <option value='width="10%"' selected>100%</option>
                                         </select>
                                 
                                     </div>
