imagesの追加しました

--- a/index.html
+++ b/index.html
@@ -381,6 +381,7 @@
     <script src="js/carousel.js"></script>
     <script src="js/text.js"></script>
     <script src="js/card.js"></script>
+    <script src="js/images.js"></script>
     <script src="js/preview.js"></script>
     <script src="js/main.js"></script>
 </body>
