--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="js/titleScroll.js"></script>
+    <script src="js/textScroll.js"></script>
     <title>ここは開発支援ツールのトップページだよ！！</title>
 </head>
 
 <body>
-    <h1>ここは開発支援ツールのトップページだよ！！</h1>
-    <h2>タイトルをよく見てね</h2>
+    <h1 class="scroll">ここは開発支援ツールのトップページだよ！！</h1>
+    <h2 class="scroll">タイトルをよく見てね</h2>
 </body>
 
 </html>
