--- a/html/divTools/index.html
+++ b/html/divTools/index.html
@@ -337,6 +337,7 @@
     </div>
     <script src="../../js/divTools.js"></script>
     <script src="../../js/colorSelector.js"></script>
+    <script src="../../js/copyClipboard.js"></script>
 </body>
 
 </html>
